syntax = "proto3";

package pb;

option go_package = "github.com/the-medo/talebound-backend/pb";


message GetPostByIdRequest {
  int32 postId = 1;
}

message GetPostsByUserIdRequest {
  int32 userId = 1;
}

message GetPostHistoryRequest {
  int32 postId = 1;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
}

message UpdatePostRequest {
  int32 postId = 1;
  string title = 2;
  string content = 3;
}

message DeletePostRequest {
  int32 postId = 1;
}

